--- a/paraphase/data/38/config.yaml
+++ b/paraphase/data/38/config.yaml
@@ -30,13 +30,14 @@ pms2:
   genes: PMS2
   check_nm: 0.1
   realign_region: chr7:5965000-6010000
-  extract_regions: chr7:5965000-5989062 chr7:6735629-6759796
-  gene2_region: chr7:6735629-6759796
-  right_boundary: 5987500
+  extract_regions: chr7:5965000-5993410 chr7:6733543-6759796
+  gene2_region: chr7:6733543-6759796
+  right_boundary: 5993450
   pivot_site: 5986569
-  noisy_region: [[5980880, 5980980], [5979663, 5979669], [5975950, 5976080]]
+  noisy_region: [[5980880, 5980980], [5979663, 5979669], [5975950, 5976080], [5988500, 5992350], [5992780, 5993400]]
   is_reverse: True
   add_sites: ["5986569_G_A"]
+  clip_3p_positions: [5993410]
 rccx: 
   genes: CYP21A2,C4A,C4B,TNXB
   is_tandem: True
@@ -54,7 +55,7 @@ rccx:
   deletion1_name: "32017431_del_6367"
   deletion2_name: "32043718_del_120"
   left_boundary: 32013300
-  right_boundary: 32046000
+  right_boundary: 32046200
   # 120bp sv
   del2_3p_pos1: 32043700
   del2_3p_pos2: 32043723
@@ -86,8 +87,8 @@ strc:
   del1_5p_pos2: 43602948
 cfc1:
   genes: CFC1,CFC1B
-  realign_region: chr2:130592000-130610000
-  extract_regions: chr2:130510753-130533741 chr2:130587000-130610000
+  realign_region: chr2:130592000-130605000
+  extract_regions: chr2:130510753-130533741 chr2:130587000-130605000
   pivot_site: 130593061
   is_reverse: True
   add_sites: ["130593061_A_G"]
@@ -162,8 +163,6 @@ hba:
   extract_regions: chr16:168656-177541
   clip_5p_positions: [171989]
   clip_3p_positions: [173729]
-  gene_start: 171989
-  gene_end: 173729
   is_tandem: True
   depth_region: [[160000, 190000]]
   noisy_region: [[172417, 172418]]
@@ -172,27 +171,25 @@ SSX2:
   genes: SSX2,SSX2B
   is_tandem: True
   is_reverse: True
+  is_palindrome: True
   realign_region: chrX:52696000-52729000
   extract_regions: chrX:52696000-52762432
 SSX4: 
   genes: SSX4,SSX4B
   is_tandem: True
   is_reverse: True
+  is_palindrome: True
   realign_region: chrX:48380000-48396314
   extract_regions: chrX:48380000-48417000
   left_boundary: 48380500
-CR1:
-  genes: CR1
-  realign_region: chr1:207527100-207545700
-  extract_regions: chr1:207529087-207566209
-  is_tandem: True
-  check_nm: 0.02
+  noisy_region: [[48381096, 48381555]]
 CENPVL2:
   genes: CENPVL1,CENPVL2
   realign_region: chrX:51675000-51692963
   extract_regions: chrX:51675000-51692963 chrX:51700364-51718343  
   is_tandem: True
   is_reverse: True
+  is_palindrome: True
   noisy_region: [[51691779, 51691984]]
 DMRTC1:
   genes: DMRTC1,DMRTC1B,FAM236A,FAM236B,FAM236C,FAM236D
@@ -203,6 +200,7 @@ DMRTC1:
   noisy_region: [[72943757, 72943880]]
   is_tandem: True
   is_reverse: True
+  is_palindrome: True
 XAGE1A:
   genes: XAGE1A,XAGE1B
   realign_region: chrX:52490000-52502000
@@ -216,7 +214,6 @@ TRIM49D1:
   left_boundary: 89909500
   right_boundary: 89922500
   clip_3p_positions: [89920623]
-  gene_end: 89920623
   is_tandem: True
   is_reverse: True
 CXorf51A:
@@ -225,6 +222,8 @@ CXorf51A:
   extract_regions: chrX:146812425-146822425 chrX:146802090-146812090
   is_tandem: True
   is_reverse: True
+  is_palindrome: True
+  noisy_region: [[146816220, 146816278]]
 DDT:
   genes: DDT,DDTL
   realign_region: chr22:23971000-23982905
@@ -234,20 +233,22 @@ DDT:
   is_reverse: True
 H3C14:
   genes: H3C14,H3C15,H2AC18,H2AC19,H4C14,H4C15
-  realign_region: chr1:149828816-149845484
-  extract_regions: chr1:149828816-149843536 chr1:149850276-149865000
-  left_boundary: 149828816
-  right_boundary: 149843536
+  realign_region: chr1:149832000-149845484
+  extract_regions: chr1:149832000-149843536 chr1:149850276-149865000
+  clip_3p_positions: [149843518]
+  noisy_region: [[149837998, 149838086]]
   is_tandem: True
   is_reverse: True
 MBD3L2:
-  genes: MBD3L2,MBD3L2B
-  realign_region: chr19:7037528-7060528
-  extract_regions: chr19:7037528-7051624 chr19:7019148-7033227
+  genes: MBD3L2,MBD3L2B,MBD3L3,MBD3L4,MBD3L5
+  realign_region: chr19:7037528-7051735
+  extract_regions: chr19:7037528-7062000 chr19:7019148-7033227
   left_boundary: 7037528
   right_boundary: 7051623
   is_reverse: True
   is_tandem: True
+  clip_3p_positions: [7043226]
+  noisy_region: [[7042002, 7042106]]
 DEFA1:
   genes: DEFA1,DEFA1B,DEFA3
   realign_region: chr8:6974238-6991000
@@ -255,9 +256,8 @@ DEFA1:
   left_boundary: 6974300
   is_tandem: True
   check_nm: 0.1
-  noisy_region: [[6984000, 6985910]]
+  noisy_region: [[6975823, 6975828], [6984000, 6985910]]
   clip_3p_positions: [6985908]
-  keep_truncated: True
 CCZ1:
   genes: CCZ1
   realign_region: chr7:5898000-5930000
@@ -268,6 +268,7 @@ CSAG2:
   realign_region: chrX:152690000-152720620
   extract_regions: chrX:152690000-152720620 chrX:152747848-152778471
   is_reverse: True
+  is_palindrome: True
 OR4M2:
   genes: OR4M2,OR4N4,OR4M2B,OR4N4C
   realign_region: chr15:22071068-22105192
@@ -336,32 +337,26 @@ PRY:
   realign_region: chrY:22489897-22515137
   extract_regions: chrY:22489898-22515137 chrY:22071256-22096507 chrY:23680940-23702786 chrY:25967288-25989136
   left_boundary: 22493307
-  right_boundary: 
-  expect_cn2: True
 BPY2:
   genes: BPY2,BPY2B,BPY2C
   realign_region: chrY:22983763-23005965
   extract_regions: chrY:22983764-23005965 chrY:24617505-24639707 chrY:25030401-25052603
   left_boundary: 22983765
   right_boundary: 23005964
-  expect_cn2: True
 CHRNA7:
   genes: CHRNA7
-  realign_region: chr15:32030015-32173518
-  extract_regions: chr15:32030015-32173518 chr15:30360306-30375956
-  left_boundary: 32030015
-  right_boundary: 32173518
+  realign_region: chr15:32100015-32173518
+  extract_regions: chr15:32100015-32173518 chr15:30360306-30375956
   is_reverse: True
   clip_5p_positions: [32153206]
-CNTNAP3C:
+  noisy_region: [[32114013, 32114163]]
+CNTNAP3:
   genes: CNTNAP3,CNTNAP3C
-  realign_region: chr9:61330217-61453530
+  realign_region: chr9:39162500-39288814
   extract_regions: chr9:61330217-61453530 chr9:39165433-39288814
-  left_boundary: 61330217
-  right_boundary: 61453530
   is_reverse: True
   expect_cn2: True
-  noisy_region: [[61409346, 61409399], [61367691, 61367733]]
+  noisy_region: [[39209580, 39209791], [39251285, 39251389], [39253010, 39253051], [39257549, 39257559]]
 CTAGE6:
   genes: CTAGE6,CTAGE15
   realign_region: chr7:143746392-143762392
@@ -382,6 +377,7 @@ CXorf49:
   left_boundary: 71706330
   right_boundary: 71726327
   is_reverse: True
+  is_palindrome: True
 
 DEFB109B:
   genes: DEFB109B,USP17L1,USP17L3,USP17L4,USP17L8
@@ -398,6 +394,7 @@ PRR23D1:
   left_boundary: 7531040
   right_boundary: 7546000
   is_reverse: True
+  noisy_region: [[7538337, 7538352]]
 
 DEFB107A:
   genes: DEFB107A
@@ -413,6 +410,7 @@ DEFB105A:
   left_boundary: 7813694
   right_boundary: 7832441
   is_reverse: True
+  noisy_region: [[7826969,7827750]]
 DEFB106A:
   genes: DEFB106A,DEFB106B
   realign_region: chr8:7817096-7837096
@@ -420,6 +418,7 @@ DEFB106A:
   left_boundary: 7817098
   right_boundary: 7837095
   is_reverse: True
+  noisy_region: [[7826969,7827750]]
 DEFB104A:
   genes: DEFB104A,DEFB104B
   realign_region: chr8:7828839-7848839
@@ -463,8 +462,9 @@ ZNF705D:
   extract_regions: chr8:12088839-12116016 chr8:12335087-12362253 chr8:7930859-7955249
   left_boundary: 12088840
   right_boundary: 12116015
-  check_nm: 0.2
+  check_nm: 0.1
   noisy_region: [[12091626, 12101750]]
+  clip_5p_positions: [12091626]
 FAM86B1:
   genes: FAM86B1,FAM86B2
   realign_region: chr8:12180000-12200000
@@ -494,7 +494,6 @@ ETDA:
   right_boundary: 135262822
   is_reverse: True
   clip_3p_positions: [135256413]
-  gene_end: 135256413
 FAM156A:
   genes: FAM156A,FAM156B
   realign_region: chrX:52942886-52962886
@@ -502,6 +501,7 @@ FAM156A:
   left_boundary: 52942888
   right_boundary: 52962885
   is_reverse: True
+  is_palindrome: True
 FAM246A:
   genes: FAM246A,FAM246B
   realign_region: chr22:21350950-21370950
@@ -511,7 +511,7 @@ FAM246A:
   is_reverse: True
 
 FCGR2C:
-  genes: FCGR2C
+  genes: FCGR2C,FCGR2B
   realign_region: chr1:161580571-161602000
   extract_regions: chr1:161580572-161594218 chr1:161662376-161676049
   left_boundary: 161580573
@@ -558,13 +558,6 @@ GATD3:
   right_boundary: 44147500
   is_reverse: True
   expect_cn2: True
-
-GOLGA6L1:
-  genes: GOLGA6L1,GOLGA6L26
-  realign_region: chr15:23121944-23141944
-  extract_regions: chr15:23123715-23141944 chr15:23321180-23339370
-  left_boundary: 23123716
-  right_boundary: 23141943
 GOLGA6L24:
   genes: GOLGA6L24,GOLGA6L25
   realign_region: chr15:28342967-28362967
@@ -578,6 +571,7 @@ GOLGA8A:
   extract_regions: chr15:34378799-34431301 chr15:34525011-34577508
   left_boundary: 34380000
   right_boundary: 34420000
+  noisy_region: [[34417325, 34417360]]
 GOLGA8F:
   genes: GOLGA8F,GOLGA8G
   realign_region: chr15:28375342-28395342
@@ -587,10 +581,8 @@ GOLGA8F:
   is_reverse: True
 GOLGA8K:
   genes: GOLGA8K,GOLGA8T
-  realign_region: chr15:32386445-32406445
+  realign_region: chr15:32389000-32406445
   extract_regions: chr15:32386446-32406445 chr15:30131900-30151905
-  left_boundary: 32386447
-  right_boundary: 32406444
   is_reverse: True
 GPAT2:
   genes: GPAT2
@@ -623,6 +615,7 @@ IQCK:
   left_boundary: 19760000
   right_boundary: 19830000
   expect_cn2: True
+  noisy_region: [[19786695, 19786930], [19792759, 19792771]]
 LGALS9B:
   genes: LGALS9B,LGALS9C
   realign_region: chr17:20448467-20468467
@@ -652,6 +645,7 @@ MAGEH1:
   right_boundary: 55462845
   clip_5p_positions: [55453508]
   is_reverse: True
+  is_palindrome: True
 MALL:
   genes: MALL
   realign_region: chr2:110083370-110118500
@@ -673,14 +667,8 @@ NOTCH2:
   extract_regions: chr1:120008822-120070162 chr1:120723414-120784768
   left_boundary: 120008823
   right_boundary: 120069700
-  noisy_region: [[120024344, 120024352]]
+  noisy_region: [[120024344, 120024352], [120019785, 120019790]]
   is_reverse: True
-NPIPA1:
-  genes: NPIPA1
-  realign_region: chr16:14934749-14954749
-  extract_regions: chr16:14934750-14952002 chr16:16333237-16350465
-  left_boundary: 14934751
-  right_boundary: 14952001
 NPIPA2:
   genes: NPIPA2,NPIPA3
   realign_region: chr16:14742033-14765962
@@ -707,6 +695,7 @@ NXF2:
   left_boundary: 102300000
   right_boundary: 102327221
   is_reverse: True
+  is_palindrome: True
 OCLN:
   genes: OCLN
   realign_region: chr5:69492290-69558604
@@ -751,7 +740,7 @@ PABPC1L2A:
   right_boundary: 73086957
   clip_5p_positions: [73077480]
   is_reverse: True
-  gene_start: 73077480
+  is_palindrome: True
 PDPK1:
   genes: PDPK1
   realign_region: chr16:2537521-2603688
@@ -760,6 +749,8 @@ PDPK1:
   right_boundary: 2599224
   clip_3p_positions: [2584851]
   is_reverse: True
+  use_r2k: True
+  noisy_region: [[2551657, 2552272]]
 POTEE:
   genes: POTEE,POTEF
   realign_region: chr2:131209036-131265778
@@ -803,13 +794,7 @@ PRAMEF7:
   left_boundary: 12908682
   right_boundary: 12928679
   is_reverse: True
-PRAMEF5:
-  genes: PRAMEF5,PRAMEF6
-  realign_region: chr1:13248816-13268816
-  extract_regions: chr1:13248817-13268816 chr1:12932973-12952975
-  left_boundary: 13248818
-  right_boundary: 13268815
-  is_reverse: True
+  noisy_region: [[12915463, 12915676]]
 PRAMEF25:
   genes: PRAMEF25,PRAMEF26,HNRNPCL3,HNRNPCL4
   realign_region: chr1:13058000-13084329
@@ -817,6 +802,8 @@ PRAMEF25:
   left_boundary: 13058000
   right_boundary: 13084329
   is_reverse: True
+  check_nm: 0.02
+  clip_5p_positions: [13075113]
 PRAMEF13:
   genes: PRAMEF13
   realign_region: chr1:13191500-13208798
@@ -824,13 +811,15 @@ PRAMEF13:
   left_boundary: 13191500
   right_boundary: 13208797
   is_reverse: True
+  noisy_region: [[13203300, 13203576]]
 PRAMEF18:
   genes: PRAMEF18
-  realign_region: chr1:13220000-13234424
+  realign_region: chr1:13220900-13234424
   extract_regions: chr1:13220000-13234424 chr1:13004385-13014535
   left_boundary: 13220900
   right_boundary: 13234424
   is_reverse: True
+  clip_5p_positions: [13224057]
 
 POTED:
   genes: POTED
@@ -900,6 +889,7 @@ RGPD3:
   left_boundary: 106402908
   right_boundary: 106466000
   is_reverse: True
+  noisy_region: [[106425157, 106425170]]
 RHOXF2:
   genes: RHOXF2,RHOXF2B
   realign_region: chrX:120152121-120172121
@@ -995,6 +985,7 @@ TMLHE:
   left_boundary: 155488513
   right_boundary: 155510000
   is_reverse: True
+  is_palindrome: True
 TRIM49:
   genes: TRIM49,TRIM49C
   realign_region: chr11:89793115-89813115
@@ -1026,10 +1017,9 @@ U2AF1:
 
 UPK3BL1: 
   genes: UPK3BL1,UPK3BL2
-  realign_region: chr7:102629908-102649908
+  realign_region: chr7:102629908-102646500
   extract_regions: chr7:102629909-102649908 chr7:102530825-102550815
-  left_boundary: 102629910
-  right_boundary: 102649907
+  noisy_region: [[102639951, 102640023]]
 POLR2J2:
   genes: POLR2J2,POLR2J3
   realign_region: chr7:102658854-102678854
@@ -1047,12 +1037,11 @@ ZNF595:
 
 FOXD4L4:
   genes: FOXD4L4,FOXD4L5
-  realign_region: chr9:65727771-65747771
-  extract_regions: chr9:65727772-65747771 chr9:65273748-65293756 chr9:68293705-68301609
+  realign_region: chr9:65727771-65740000
+  extract_regions: chr9:65727772-65740000 chr9:65281523-65293756 chr9:68293705-68301609
   left_boundary: 65727773
   right_boundary: 65738784
   is_reverse: True
-  check_nm: 0.2
   noisy_region: [[65735600, 65735970]]
 FOXD4L3:
   genes: FOXD4L3,FOXD4L6
@@ -1061,6 +1050,7 @@ FOXD4L3:
   left_boundary: 68293977
   right_boundary: 68313974
   is_reverse: True
+  check_nm: 0.012
 
 GTF2IRD2B:
   genes: GTF2IRD2B,GTF2IRD2
@@ -1086,11 +1076,10 @@ ICOSLG:
   expect_cn2: True
 MAGED4:
   genes: MAGED4,MAGED4B
-  realign_region: chrX:52178578-52198578
+  realign_region: chrX:52182000-52198578
   extract_regions: chrX:52178579-52198578 chrX:52055517-52075516
-  left_boundary: 52178580
-  right_boundary: 52198577
   is_reverse: True
+  is_palindrome: True
 CBS:
   genes: CBS
   realign_region: chr21:43052691-43076335
@@ -1127,12 +1116,14 @@ CASTOR2:
   left_boundary: 74965884
   right_boundary: 75032028
   clip_3p_positions: [74984489]
+  noisy_region: [[74976525, 74976574]]
 CLEC18C:
   genes: CLEC18A,CLEC18B,CLEC18C
-  realign_region: chr16:70170341-70190341
+  realign_region: chr16:70170341-70187341
   extract_regions: chr16:70170342-70190341 chr16:69947429-69967427 chr16:74405201-74425232
-  left_boundary: 70170343
-  right_boundary: 70190340
+  clip_5p_positions: [70180660]
+  noisy_region: [[70171285, 70171320], [70174152, 70174163]]
+  use_supplementary: True
 GTF2H2:
   genes: GTF2H2,GTF2H2C
   realign_region: chr5:71034847-71068176
@@ -1160,6 +1151,7 @@ NBPF4:
   left_boundary: 108223000
   right_boundary: 108244575
   clip_5p_positions: [108236178]
+  noisy_region: [[108231294, 108231299]]
 PPIAL4D:
   genes: PPIAL4D,PPIAL4E,PPIAL4F
   realign_region: chr1:145231794-145251794
@@ -1180,34 +1172,30 @@ FAM72A:
   right_boundary: 206204508
 GOLGA8N:
   genes: GOLGA8N,GOLGA8O,GOLGA8Q,GOLGA8R
-  realign_region: chr15:32590346-32610346
+  realign_region: chr15:32590346-32607237
   extract_regions: chr15:32590347-32607507 chr15:30400208-30417365 chr15:30548871-30566038 chr15:32441569-32458746
   left_boundary: 32590348
   right_boundary: 32606000
+  check_nm: 0.02
 POTEB:
-  genes: POTEB,POTEB2,POTE3
+  genes: POTEB,POTEB2,POTEB3
   realign_region: chr15:21845829-21878235
   extract_regions: chr15:21845830-21878235 chr15:20834873-20867269 chr15:21408465-21439843 chr15_KI270727v1_random:135661-167032
   left_boundary: 21845831
   right_boundary: 21877188
-SPATA31A1:
-  genes: SPATA31A1,SPATA31A3,SPATA31A5,SPATA31A7
-  realign_region: chr9:39348815-39368815
-  extract_regions: chr9:39348816-39368815 chr9:60907506-60927532 chr9:61184485-61203156 chr9:66979422-66998101
-  left_boundary: 39350176
-  right_boundary: 39368814
 NUTM2A:
   genes: NUTM2A,NUTM2B,NUTM2D,NUTM2E
   realign_region: chr10:87220213-87240213
   extract_regions: chr10:87220214-87240213 chr10:79697989-79718012 chr10:87354483-87369657 chr10:79838172-79853341
-  left_boundary: 87222272
-  right_boundary: 87237439
+  clip_5p_positions: [87222271]
+  clip_3p_positions: [87236514, 87237440]
 ANKRD20A1:
   genes: ANKRD20A1
   realign_region: chr9:67858431-67902894
   extract_regions: chr9:67858432-67902894 chr9:40223065-40266892 chr9:64368680-64413189 chr9:66109347-66153849
   left_boundary: 67859093
   right_boundary: 67902893
+  noisy_region: [[67859646, 67859662]]
 GRAPL:
   genes: GRAPL,GRAP
   realign_region: chr17:19127089-19159687
@@ -1222,12 +1210,14 @@ ARL17A:
   extract_regions: chr17:46552257-46580191 chr17:46334404-46362266
   left_boundary: 46552258
   right_boundary: 46580190
+  clip_3p_positions: [46565080]
 NSF:
   genes: NSF
   realign_region: chr17:46590169-46757964
   extract_regions: chr17:46590170-46707123 chr17:46372249-46489410
   left_boundary: 46590171
   right_boundary: 46707122
+  noisy_region: [[46609984, 46610171]]
 
 AMY1A:
   genes: AMY1A,AMY1B,AMY1C
@@ -1247,6 +1237,7 @@ CTAG1A:
   right_boundary: 154591300
   clip_3p_positions: [154591326]
   is_reverse: True
+  is_palindrome: True
   add_sites: ["154591380_A_G"]
 BOLA2:
   genes: BOLA2,BOLA2B,SLX1A,SLX1B,SULT1A3,SULT1A4
@@ -1256,4 +1247,61 @@ BOLA2:
   right_boundary: 29470000
   clip_5p_positions: [29449191]
   add_sites: ["29449010_T_G"]
-  
+
+CYP2D6:
+  genes: CYP2D6
+  realign_region: chr22:42122800-42132500
+  extract_regions: chr22:42123196-42145723
+  gene2_region: chr22:42135344-42145873
+  use_r2k: True
+  is_tandem: True
+  check_nm: 0.07
+  noisy_region: [[42125955, 42126005], [42132023, 42132051]]
+  clip_5p_positions: [42123192]
+  clip_3p_positions: [42132193]
+  call_fusion: 5p
+GBA:
+  genes: GBA1
+  realign_region: chr1:155230000-155242500
+  extract_regions: chr1:155210828-155219269 chr1:155230976-155241500
+  gene2_region: chr1:155210380-155219657
+  check_nm: 0.2
+  use_r2k: True
+  noisy_region: [[155236583, 155237172], [155238947, 155239582], [155240160, 155240489], [155241400, 155241900]]
+  use_supplementary: True
+  clip_5p_positions: [155230976]
+  clip_3p_positions: [155242229]
+  call_fusion: 3p
+CYP11B1:
+  genes: CYP11B1,CYP11B2
+  realign_region: chr8:142872000-142880500
+  extract_regions: chr8:142872000-142880500 chr8:142910559-142917843
+  gene2_region: chr8:142910760-142917977
+  check_nm: 0.2
+  use_r2k: True
+  noisy_region: [[142874825, 142874950]]
+  clip_5p_positions: [142873164]
+  clip_3p_positions: [142879950]
+  call_fusion: 5p
+CFH:
+  genes: CFH,CFHR1
+  realign_region: chr1:196740000-196772000
+  extract_regions: chr1:196740000-196772000 chr1:196827188-196855916
+  gene2_region: chr1:196827188-196855916
+  check_nm: 0.1
+  use_r2k: True
+  clip_5p_positions: [196742575]
+  clip_3p_positions: [196771224]
+  noisy_region: [[196748050, 196748125], [196768556, 196768896]]
+  call_fusion: 5p
+CFHR3:
+  genes: CFHR3,CFHR4,CFHR1,CFHR2
+  realign_region: chr1:196786000-196830000
+  extract_regions: chr1:196786000-196830000 chr1:196911478-196948804
+  gene2_region: chr1:196911478-196948804
+  check_nm: 0.1
+  use_r2k: True
+  clip_5p_positions: [196786955]
+  clip_3p_positions: [196827189]
+  noisy_region: [[196809513, 196812537], [196817000, 196817020], [196826466, 196826515]]
+  call_fusion: 5p
