--- a/paraphase/data/38/config.yaml
+++ b/paraphase/data/38/config.yaml
@@ -159,10 +159,11 @@ opn1lw:
   exon3_variants: [[["154152987_A_C"], "L", "M"], [["154153041_G_A", "154153043_G_T"], "I", "V"], [["154153051_C_T"], "V", "A"], [["154153062_A_G"], "V", "I"], [["154153068_G_T"], "S", "A"]]
 hba:
   genes: HBA1,HBA2
-  realign_region: chr16:171800-173900
+  realign_region: chr16:171800-175500
   extract_regions: chr16:168656-177541
-  clip_5p_positions: [171989]
-  clip_3p_positions: [173729]
+  check_nm: 0.25
+  clip_5p_positions: [171989, 172890]
+  clip_3p_positions: [173729, 175046]
   is_tandem: True
   depth_region: [[160000, 190000]]
   noisy_region: [[172417, 172418]]
